<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="1"
        android:title="@string/action_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_page"
        android:orderInCategory="3"
        android:title="@string/action_add_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_page"
        android:orderInCategory="4"
        android:title="@string/action_delete_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="5"
        android:title="@string/action_delete"
        app:showAsAction="never" />

</menu>